# BlueLedger

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  package-lock.json  package.json  signup.lua  todos.md  tsconfig.tsbuildinfo
backend/migrations/: 20260308124755_init.down.sql  20260308124755_init.up.sql
backend/src/: config.json  config.rs  db.ts  extraction.ts  index.ts  lib.rs  main.rs  model.ts
backend/src/middleware/: auth.rs
backend/src/models/: geojson.rs  jwt.rs  mod.rs  post.model.ts  user.model.ts  users.rs
backend/src/routes/: handlers.rs
backend/src/services/: aws.ts
backend/src/state/: state.rs
py-interface/: aoi2.geojson  api-documentation.md  api.py  carbon_calculator.py  carbon_credit_pipeline.py  change_detection.py  config.yaml  config_loader.py  data_quality.py  eligibility.py  main.py  raster_processing.py  requirement.txt  requirements.txt  satellite_data.py  test_all.py  visualization.py
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs
server/src/middleware/: auth.rs
server/src/models/: geojson.rs  jwt.rs  mod.rs
server/src/routes/: handlers.rs
