[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
bcrypt = "0.19.0"
chrono = "0.4.44"
dotenvy = "0.15.7"
env_logger = "0.11.9"
envy = "0.4.2"
futures = "0.3.32"
futures-util = "0.3.32"
hmac = "0.12.1"
# v10 requires either `rust_crypto` or `aws_lc_rs` (defaults no longer include a backend).
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros", "migrate", "uuid" ] }
uuid = { version = "1.22.0", features = [ "v4", "serde" ] }
